frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "1.0"
              memory: "1Gi"
            limits:
              cpu: "1.0"
              memory: "1Gi"
