frontend/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  label: 
    app: frontend
  namespace: dev
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector: 
    app: frontend
  type: ClusterIP
